--- a/part-2-flex.html
+++ b/part-2-flex.html
@@ -188,12 +188,15 @@
     }
 
     /* layout-5 */
+    #layout-5 {
+      border: none;
+    }
     #layout-5 .item-1 {
       width: 100%;
       height: 50%;
       background-color: forestgreen;
       display: flex;
-      border: 5px solid rgb(145, 0, 0);
+      border: 5px solid rgb(255, 0, 0);
     }
 
     #layout-5 .item-1-1 {
